# ssh-bookmarker

./: CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json
scripts/: gen-tray-icon.py
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  error.rs  launcher.rs  lib.rs  main.rs  settings.rs
