[package]
name = "ssh-bookmarker"
version = "0.2.0"
description = "SSH connection bookmarks with one-click launch"
authors = ["aletheia"]
edition = "2021"

[lib]
name = "ssh_bookmarker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libsql = { version = "0.6", default-features = false, features = ["core"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time", "io-util"] }
anyhow = "1"
thiserror = "2"
dirs = "5"
